updates swagger docs
